@@ -1,3 +1,8 @@
+Fri Oct  6 17:51:50 2000    <otaylor@redhat.com>
+
+	* gtkdoc-scan.in gtkdoc-mkdb.in: Allow multiple
+	--source-dir options.
+
 Thu Sep  7 11:41:12 2000  Owen Taylor  <otaylor@redhat.com>
 
 	* gtkdoc-mkdb.in: Ignore all . files when scanning directories.
